# qap-solver

./: CMakeLists.txt  LICENSE  README.md  nodes.txt
.github/workflows/: ccpp.yml
genetic/: CMakeLists.txt
genetic/include/genetic/: Crossover.h  GenAlg.h  Generation.h  Mutation.h  Selection.h
genetic/src/genetic/: Crossover.cpp  GenAlg.cpp  Generation.cpp  Mutation.cpp  Selection.cpp  utils.cpp  utils.h
include/: QAP.h  bound.h  graph.h  helpers.h  permutation.h  qap.h  qap_executor.h  utils.h
include/genetic/: crossover.h  gen_alg.h  generation.h  mutation.h  selection.h
input/: chr12a_nodes.txt  chr12a_tasks.txt  chr12b_tasks.txt  chr15a_tasks.txt  chr15b_nodes.txt  chr15b_tasks.txt  chr18a_nodes.txt  chr18a_tasks.txt  chr20a_nodes.txt  chr20a_tasks.txt  chr22b_nodes.txt  chr22b_tasks.txt  had12_tasks.txt  had14_nodes.txt  had14_tasks.txt  had16_nodes.txt  had16_tasks.txt  had20_nodes.txt  had20_tasks.txt  nug12_tasks.txt  nug14_nodes.txt  nug14_tasks.txt  nug15_nodes.txt  nug15_tasks.txt  nug25_nodes.txt  nug25_tasks.txt  rou12_nodes.txt  rou12_tasks.txt  scr12_nodes.txt  scr12_tasks.txt  scr15_nodes.txt  scr15_tasks.txt
src/: QAP.cpp  QuadraticAssignmentProblem.cpp  bound.cpp  helpers.cpp  main.cpp  permutation.cpp  qap.cpp  qap_executor.cpp  utils.cpp
src/genetic/: crossover.cpp  gen_alg.cpp  generation.cpp  mutation.cpp  selection.cpp
